Fixed Header and Added header spacing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,11 @@
   padding: 30px;
 }
 
+.spacing{
+  height: 70px;
+}
+
 .header{
-  position: relative;
   height: 100px;
   background-color: darkred; //also change background color of nav
 
